# web-sanity-check

./: README.md  pyproject.toml
.axentx-dev-bot/: 20260621-010703-web-sanity-check-docs-6e367d84.md  20260622-025437-web-sanity-check-docs-8ad008d1.md  20260622-025437-web-sanity-check-docs-8ad008d1.md.processed
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md
src/: github_app.py  test_generator.py  web_sanity_check.py  webguard.py
tests/: test_github_app.py  test_test_generator.py  test_web_sanity_check.py  test_webguard.py
