[tool.poetry]
name = "web-sanity-check"
version = "0.1.0"
description = "Automated web sanity check tool for CI/CD pipelines."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
